# CHEAPDAN

./: .gitignore  CMakeLists.txt  LICENSE  README.md
benchmarks/: CMakeLists.txt  bench_ceemdan.c  bench_fracdiff.c  bench_homomorphic.c
examples/: CMakeLists.txt  example_1d.c  example_2d.c  example_fracdiff.c  example_homomorphic.c
include/: cheapdan.h  cheapdan_rts.h
include/cheapdan/: fracdiff.h  homomorphic.h  log.h  rts_full.h
tests/: CMakeLists.txt  test_ceemdan_1d.c  test_ceemdan_2d.c  test_fracdiff.c  test_homomorphic.c  test_log.c  test_rts.c  test_weights.c
